[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fontes/BLACC___.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Script/Menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 287.0
margin_top = 206.0
margin_right = 736.0
margin_bottom = 393.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 449.0
margin_bottom = 115.0
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 1 )
text = "o alquimista"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 119.0
margin_right = 449.0
margin_bottom = 139.0
text = " Start "

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 143.0
margin_right = 449.0
margin_bottom = 163.0
text = " Exit "

[node name="FullScreen" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 167.0
margin_right = 449.0
margin_bottom = 187.0
text = "Fullscreen"
[connection signal="pressed" from="CenterContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/FullScreen" to="." method="_on_FullScreen_pressed"]
